<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UserHomeActivities.ViewProfileActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/w"
        android:fontFamily="@font/rubik_bold"
        android:textSize="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/invitations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:text="@string/invitations"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/coral"
        />
    <HorizontalScrollView
        android:id="@+id/invitations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/invitations_text" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/invited_events_button"
            android:textAllCaps="false"
            android:layout_width="160dp"
            android:layout_height="112dp"
            android:paddingTop="28dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="28dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/coral"
            android:enabled="true"
            android:fontFamily="@font/rubik_medium_italic"
            android:textSize="15sp"
            android:text="@string/invited_events"
            android:textColor="@color/white"
            />

            <Button
                android:id="@+id/public_events_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="28dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/coral"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/public_events"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/upcoming_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/invitations"
        android:text="@string/upcoming"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/orange"
        />
    <HorizontalScrollView
        android:id="@+id/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/upcoming_text" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/attending_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="28dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/orange"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/attending_events"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/hosting_button"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/orange"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:paddingLeft="14dp"
                android:paddingTop="28dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:text="@string/hosted_events"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/create_event_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/orange"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/host_event"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/events"
        android:text="@string/profile"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/green"
        />
    <HorizontalScrollView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_text" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/event_history_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/green"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/view_history"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/update_profile_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/green"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/logout_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="28dp"
                android:layout_gravity="start"
                android:backgroundTint="@color/green"
                android:enabled="true"
                android:fontFamily="@font/rubik_medium_italic"
                android:textSize="15sp"
                android:text="@string/logout"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.fragment.app.FragmentContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/snackbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>