...
        android:padding="10dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sample Event Title "
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/blue"
            android:textSize="24sp"
...
            android:text="Event category"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            />
        <TextView
            android:id="@+id/event_invitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Invitation Pending"
            android:fontFamily="@font/rubik_bold"
            android:layout_marginTop="6dp"
            android:textColor="@color/orange"
...
